<resources>
    <string name="app_name">ConversorMoeda</string>
    <string name="valor">Valor:</string>
    <string name="converter_para">Converter para:</string>
    <string name="dollar">Dólar</string>
    <string name="real">Real</string>
    <string name="valor_convertido">Valor convertido:</string>
    <string name="converter">Converter</string>
    <string name="euro">Euro</string>
</resources>
