<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.davividal.conversormoeda.MainActivity">

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor" />

        <EditText
            android:id="@+id/originalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingLeft="@dimen/paddingLeft" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1">

        <TextView
            android:id="@+id/radioLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/converter_para" />

        <RadioGroup
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioLabel">

            <RadioButton
                android:id="@+id/dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dollar" />

            <RadioButton
                android:id="@+id/real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2">

        <TextView
            android:id="@+id/newValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_convertido" />

        <TextView
            android:id="@+id/newValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/newValueLabel"
            android:layout_toRightOf="@id/newValueLabel"
            android:paddingLeft="@dimen/paddingLeft" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout3">

        <Button
            android:id="@+id/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="convert"
            android:text="@string/converter" />

    </RelativeLayout>
</RelativeLayout>
